# clocky-cli

./: .coverage  .env.example  .gitignore  AGENTS.md  LICENSE  README.md  SYSTEM.md  check.sh  install.sh  main.py  pyproject.toml
clocky/: __init__.py  api.py  browser.py  cli.py  cli_tag_map.py  config.py  context.py  display.py  fuzzy.py  models.py  output.py  setup.py  tag_map.py  testing.py
docs/: README.md  architecture.md  commands.md  install.md  launchers.md  output-modes.md  start-timer.md  tag-map.md  troubleshooting.md
launchers/: clocky-dispatch.sh  clocky-launcher.sh  clocky-start-timer.desktop  clocky-start.desktop  clocky-stop-timer.desktop  clocky-stop.desktop  clocky-stop.sh  clocky.desktop  lib.sh
tests/: __init__.py  test_api_mock.py  test_cli_basic.py  test_cli_enhancements.py  test_cli_flows.py  test_cli_tag_map.py  test_cli_tag_map_pick.py  test_config.py  test_display.py  test_fuzzy.py  test_integration.py  test_integration_cli_launcher.py  test_models.py  test_tag_map.py
