[project]
name = "clocky-cli"
version = "2.1.0"
description = "A CLI to interact with your Clockify account, with fuzzy project search and Ubuntu launchers."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.0",
    "python-dotenv>=1.2.1",
    "questionary>=2.1.1",
    "rapidfuzz>=3.14.3",
    "rich>=14.3.2",
    "typer>=0.23.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=6.0.0",
    "pytest-httpx>=0.36.0",
    "ruff>=0.15.1",
    "ty>=0.0.17",
]

[project.scripts]
clocky = "clocky.cli:main"

[tool.setuptools.packages.find]
include = ["clocky*"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "D",    # pydocstyle
]
ignore = [
    "D100",  # Missing docstring in public module (handled per-file)
    "D104",  # Missing docstring in public package
    "D203",  # one-blank-line-before-class (conflicts with D211)
    "D213",  # multi-line-summary-second-line (conflicts with D212)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D"]   # No docstring enforcement in tests

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=clocky --cov-report=term-missing --cov-fail-under=50"
